Fix text-overlay on wide image sections on mobile #17

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -497,6 +497,12 @@ input[type='submit'] {
 
     @media (min-width: 45em) {
         .content p {
+            padding-left: 40%;
+        }
+    }
+
+    @media (min-width: 64em) {
+        .content p {
             padding-left: 60%;
         }
     }
